name: tzworld-api
version: 0.1.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
homepage: https://github.com/danplubell/tzworld-api.git
copyright: 2015 Dan Plubell <danplubell@gmail.com>
maintainer: Dan Plubell <danplubell@gmail.com>
synopsis: API for finding an Olson time zone based on a location
description:  API for finding an Olson time zone based on a location given as latitude and longitude.
              .
              This package includes an executable named tzbl that uses the api.
              .
              This package requires SQLite3.
              
category: Time
author: Dan Plubell <danplubell@gmail.com>
tested-with: GHC ==7.10.2
extra-source-files:
    CHANGELOG.md
    README.md
data-files: data/tzworld.db
source-repository head
    type: git
    location: git@github.com:danplubell/tzworld-api.git
library
    exposed-modules:
        Data.TZworld.Api
    other-modules:
        Paths_tzworld_api
    ghc-options: -Wall
    build-depends:
                  base ==4.*
                , sqlite-simple >=0.4
                , bytestring >=0.10
                , binary >=0.7
                , containers >=0.5
                , text >=1.2
                , enclosed-exceptions >= 1.0
                , either >= 4.4
                , transformers >= 0.4
    default-language: Haskell2010
    hs-source-dirs: library
--    ghc-prof-options:-auto-all -prof

executable tzbl
    main-is: Main.hs
    build-depends:
          base -any
        , tzworld-api -any
    default-language: Haskell2010
    hs-source-dirs: executable
--    ghc-prof-options: -auto-all -prof
    ghc-options: -Wall

test-suite documentation
    type: exitcode-stdio-1.0
    main-is: Haddock.hs
    build-depends:
                  base -any,
                  process -any,
                  regex-compat -any
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall

test-suite style
    type: exitcode-stdio-1.0
    main-is: HLint.hs
    build-depends:
                  base -any,
                  hlint ==1.*
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall -Werror
                         

